[package]
name = "pdf2key"
version = "0.1.0"
edition = "2021"
description = "Conversor de PDF para Apple Keynote"
authors = ["Karan"]

[dependencies]
# GUI
eframe = "0.29"

# PDF Rendering
pdfium-render = "0.8"

# Serialization (for JXA params)
serde_json = "1.0"

# Image handling
image = "0.25"

# File dialogs
rfd = "0.15"

# Utilities
tempfile = "3.14"
anyhow = "1.0"
zip = "2.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
